--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -5,6 +5,7 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+  background-color: black;
 }
 
 #cabecera {
@@ -23,11 +24,15 @@ body {
 }
 
 #container {
+  background-color: cornsilk;
   width: 70%;
   padding: 0;
   text-align: left;
   border: 1px solid #ddd;
   margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
 }
 
 #container h1 {
@@ -35,4 +40,15 @@ body {
 }
 #post {
   padding: 1em;
+}
+
+#footer {
+  background-color: darkgray;
+  padding: 5px;
+  text-align: center;
+  font-size: 18;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  border-radius: 10px;
+  margin: 10px;
 }
