--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -5,7 +5,7 @@ body {
   font-family: Arial;
   font-size: 16px;
   margin: 0;
-  padding: 0;
+  padding-top: 25px;
   background-color: black;
 }
 
@@ -16,6 +16,8 @@ body {
   font-weight: bold;
   margin: 0;
   padding: 0.5em;
+  border-radius: 10px;
+  margin: 10px;
 }
 
 #cabecera #logo {
@@ -36,9 +38,8 @@ body {
   text-align: left;
   border: 1px solid #ddd;
   margin: 0 auto;
-  justify-content: center;
-  align-items: center;
   text-align: justify;
+  border-radius: 10px;
 }
 
 #container h1 {
